# synapsert

./: .gitignore  README.md
synapsert/: CMakeLists.txt  ir.proto  main.cpp  main.py
